# NeuroCombat

./: .gitignore  ARCHITECTURE.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  README.md  docker-compose.yml  pyproject.toml
config/: base.yaml  production.yaml  prometheus.yml
docker/: Dockerfile.base  Dockerfile.dashboard  Dockerfile.inference  Dockerfile.pose
src/neurocombat/core/: config.py  redis_client.py
src/neurocombat/schemas/: __init__.py
